Dark mode fix.

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -22,6 +22,10 @@ body {
   font-family: "LominoSubset", "Lomino", "Open Sans", sans-serif;
 }
 
+#foot-boi * {
+  background-color: unset;
+}
+
 @font-face {
   font-family: "LominoSubset";
   src: url("/fonts/lomino/lomino-regular-subset.woff2") format("woff2"),
